--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,11 @@ github:
     secret: 4fc50afb8b7290969c23d9939f563596bb724e7d
   redirect:
     uri: http://localhost:8887/callback
+
+
+spring:
+  datasource:
+    url: jdbc:h2:~/community
+    username: sa
+    password: 123
+    driver-class-name: org.h2.Driver
